<resources>
    <string name="app_name">Employees</string>
    <string name="insert_employee">Insert Employee</string>
    <string name="select_employee">Select Employee</string>
    <string name="save">Guardar</string>
    <string name="phone">Teléfono</string>
    <string name="last_last_name">Apellido Materno</string>
    <string name="last_name">Apellido Paterno</string>
    <string name="name">Nombre (s)</string>
    <string name="add_employee">Agregar empleado</string>
    <string name="search_employee">Buscar empleado</string>
    <string name="id">ID</string>
    <string name="hire_date">Fecha de contratación</string>
    <string name="search">Buscar</string>
    <string name="user">Nombre de usuario</string>
    <string name="delete">Dar de baja</string>
    <string name="update">Actualizar</string>
</resources>