<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertEmployee">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <EditText
        android:id="@+id/editTextName"
        style="@style/Forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextLastName"
        style="@style/Forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:autofillHints="false"/>

    <EditText
        android:id="@+id/editTextLastLastName"
        style="@style/Forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_last_name"
        android:inputType="textPersonName"
        android:autofillHints="false"/>

    <EditText
        android:id="@+id/editTextPhone"
        style="@style/Forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:autofillHints="false"/>

    <Button
        android:id="@+id/button"
        style="@style/Forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>