<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:layout_marginTop="155dp"
        android:layout_marginBottom="155dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewInsertEmployee"
                style="@style/employeeSelection"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/insert_employee"
                app:srcCompat="@drawable/ic_employee" />

            <Button
                android:id="@+id/buttonInsertEmployee"
                style="@style/employeeSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="insertEmployeeView"
                android:text="@string/add_employee" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewSelectEmployee"
                style="@style/employeeSelection"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/select_employee"
                app:srcCompat="@drawable/ic_resume" />

            <Button
                android:id="@+id/buttonSelectEmployee"
                style="@style/employeeSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectEmployeeView"
                android:text="@string/search_employee" />
        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>